# semantic-scholar-cli

./: README.md  pyproject.toml
.agents/skills/semantic-scholar/: SKILL.md
.agents/skills/semantic-scholar/agents/: openai.yaml
.agents/skills/semantic-scholar/references/: cli-reference.md  golden-prompts.md
src/semantic_scholar_cli/: __init__.py  __main__.py  cli.py  client.py  contracts.py  errors.py  tooling.py
tests/: conftest.py  test_cli.py  test_client.py
